--- a/. circleci/config.yml
+++ b/. circleci/config.yml
@@ -1,51 +1,48 @@
-# PHP CircleCI 2.0 configuration file
-#
-# Check https://circleci.com/docs/2.0/language-php/ for more details
-#
 version: 2
 jobs:
   build:
     docker:
-      # Specify the version you desire here
-      - image: circleci/php:7.1-node-browsers
-    working_directory: ~/erp
+      - image: php:7.0-apache
+        environment:
+          APP_ENV: local
+          APP_DEBUG: true
+          APP_KEY: kjcndjjksddwdwdw
+          DB_CONNECTION: system
+          DB_HOST: db
+          DB_PORT: 5432
+          DB_DATABASE: erp
+          DB_USERNAME: docker_erp_user
+          DB_PASSWORD: docker_erp_password
+          QUEUE_DRIVER: sync
+      - image: docker/postgres
+        environment: POSTGRES_MULTIPLE_DATABASES=erp,erp_testing
+          POSTGRES_USER=docker_erp_user
+          POSTGRES_PASSWORD=docker_erp_password
+    working_directory: /var/www/html
     steps:
+      - run:
+          name: Install System Packages
+          command: apt-get update && apt-get -y install git unzip zlib1g-dev
       - checkout
-      - run: sudo apt update
-      - run: sudo docker-php-ext-install zip
-
-      # Download and cache dependencies
-
-      # composer cache
-      - restore_cache:
-          keys:
-            # "composer.lock" can be used if it is committed to the repo
-            - v1-dependencies-{{ checksum "composer.json" }}
-            # fallback to using the latest cache if no exact match is found
-            - v1-dependencies-
-
-      - run: composer install -n --prefer-dist
-
-      - save_cache:
-          key: v1-dependencies-{{ checksum "composer.json" }}
-          paths:
-            - ./vendor
-
-      # node cache
-      - restore_cache:
-          keys:
-            - node-v4-{{ checksum "package.json" }}
-            - node-v4-
-      - run: npm install
-      - save_cache:
-          key: node-v4-{{ checksum "package.json" }}
-          paths:
-            - node_modules
-
-      # prepare the database
-      - run: php artisan migrate --env=testing --force
-
-      # run tests with phpunit or codecept
-      - run: ./vendor/bin/phpunit
-      # - run: ./vendor/bin/codecept build
-      # - run: ./vendor/bin/codecept run
+      - run:
+          name: Install PHP Extensions
+          command: docker-php-ext-install pdo pdo_mysql zip
+      - run:
+          name: Install Composer
+          command: |
+            php -r "copy('https://getcomposer.org/installer', 'composer-setup.php');"
+            php -r "copy('https://composer.github.io/installer.sig', 'composer-setup.sig');"
+            php -r "if (hash_file('SHA384', 'composer-setup.php') === trim(file_get_contents('composer-setup.sig'))) { echo 'Installer verified'; } else { echo 'Installer corrupt'; unlink('composer-setup.php'); } echo PHP_EOL;"
+            php composer-setup.php
+            php -r "unlink('composer-setup.php');"
+      - run:
+          name: Install Project Dependencies
+          command: php composer.phar install
+      - run:
+          name: Initialize Database
+          command: |
+            php artisan migrate:refresh
+            php artisan db:seed
+      - run:
+          name: Run Tests
+          command: vendor/bin/phpunit
