--- a/.travis.yml
+++ b/.travis.yml
@@ -10,9 +10,13 @@ before_install:
   # Build our containers
   - docker-compose up -d
   - docker ps -a
-install:
+# install:
+#   - travis_retry composer install --no-interaction --no-suggest
+#   - composer show --installed
+#   # - composer install
+#   # - composer require --dev phpunit/phpunit ^7
+before_script:
   - composer install
-  - composer require --dev phpunit/phpunit ^7
 script:
   - vendor/bin/phpunit
 notifications:
