--- a/.travis.yml
+++ b/.travis.yml
@@ -3,20 +3,23 @@ php:
   - 7.1.9
 services:
   - docker
-before_install:
-  # Upgrade docker/docker-compose
-  - docker -v
-  # - cp .env.example .env
-  # Build our containers
-  - docker-compose up -d
-  - docker ps -a
-# install:
-#   - travis_retry composer install --no-interaction --no-suggest
-#   - composer show --installed
-#   # - composer install
-#   # - composer require --dev phpunit/phpunit ^7
+# before_install:
+#   # Upgrade docker/docker-compose
+#   - docker -v
+#   # - cp .env.example .env
+#   # Build our containers
+#   - docker-compose up -d
+#   - docker ps -a
+# # install:
+# #   - travis_retry composer install --no-interaction --no-suggest
+# #   - composer show --installed
+# #   # - composer install
+# #   # - composer require --dev phpunit/phpunit ^7
 before_script:
   - composer install
+script:
+  echo "Running unit tests";
+  - ./vendor/bin/phpunit tests/
 notifications:
   slack:
     rooms:
