--- a/.travis.yml
+++ b/.travis.yml
@@ -18,9 +18,8 @@ services:
 # #   # - composer require --dev phpunit/phpunit ^7
 before_script:
   - composer install
-script:
-  echo "Running unit tests";
-  - ./vendor/bin/phpunit tests/
+# script:
+  # - ./vendor/bin/phpunit tests/
 notifications:
   slack:
     rooms:
