--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ services:
 # #   # - composer require --dev phpunit/phpunit ^7
 before_script:
   - composer install
+  - composer dump-autoload 
 # script:
   # - ./vendor/bin/phpunit tests/
 notifications:
