--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 sudo: required
+dist: trusty
 language: php
 php:
   - 7.1.9
@@ -17,10 +18,11 @@ services:
 # #   # - composer install
 # #   # - composer require --dev phpunit/phpunit ^7
 before_script:
+  - echo 'Running Composer update'
   - composer install
   - composer dump-autoload 
-# script:
-  # - ./vendor/bin/phpunit tests/
+script:
+  - ./vendor/bin/phpunit
 notifications:
   slack:
     rooms:
