--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ services:
 # #   # - composer install
 # #   # - composer require --dev phpunit/phpunit ^7
 before_script:
-  - echo 'Running Composer update'
+  - echo "Running Composer update"
   - composer install
   - composer dump-autoload 
 script:
