--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,18 +3,18 @@ jobs:
   build:
     docker:
       - image: php:7.0-apache
-        environment:
-          APP_ENV: local
-          APP_DEBUG: true
-          APP_KEY: kjcndjjksddwdwdw
-          DB_CONNECTION: mysql
-          DB_HOST: 127.0.0.1
-          DB_PORT: 3306
-          DB_DATABASE: testdb
-          DB_USERNAME: root
-          DB_PASSWORD: password
-          CACHE_DRIVER: memcached
-          QUEUE_DRIVER: sync
+      # environment:
+      #   APP_ENV: local
+      #   APP_DEBUG: true
+      #   APP_KEY: kjcndjjksddwdwdw
+      #   DB_CONNECTION: mysql
+      #   DB_HOST: 127.0.0.1
+      #   DB_PORT: 3306
+      #   DB_DATABASE: testdb
+      #   DB_USERNAME: root
+      #   DB_PASSWORD: password
+      #   CACHE_DRIVER: memcached
+      #   QUEUE_DRIVER: sync
       - image: postgres:latest
         environment:
           - POSTGRES_DB: erp
@@ -28,7 +28,7 @@ jobs:
       - checkout
       - run:
           name: Install PHP Extensions
-          command: docker-php-ext-install pdo php7.1-pgsql zip
+          command: docker-php-ext-install pdo pdo_pgsql zip #php7.1-pgsql
       - run:
           name: Install Composer
           command: |
