--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,17 +18,17 @@ jobs:
       - image: postgres:latest
         environment:
           - POSTGRES_DB: erp
-          - POSTGRES_USER=docker_erp_user
-          - POSTGRES_PASSWORD=docker_erp_password
+          - POSTGRES_USER: docker_erp_user
+          - POSTGRES_PASSWORD: docker_erp_password
     working_directory: /var/www/html
     steps:
       - run:
           name: Install System Packages
-          command: apt-get update && apt-get -y install git unzip zlib1g-dev
+          command: apt-get update && apt-get -y install git unzip zlib1g-dev postgresql-dev
       - checkout
       - run:
           name: Install PHP Extensions
-          command: docker-php-ext-install pdo pdo_pgsql zip #php7.1-pgsql
+          command: docker-php-ext-install pdo pdo_pgsql zip
       - run:
           name: Install Composer
           command: |
