--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,19 +3,7 @@ jobs:
   build:
     docker:
       - image: php:7.0-apache
-      # environment:
-      #   APP_ENV: local
-      #   APP_DEBUG: true
-      #   APP_KEY: kjcndjjksddwdwdw
-      #   DB_CONNECTION: mysql
-      #   DB_HOST: 127.0.0.1
-      #   DB_PORT: 3306
-      #   DB_DATABASE: testdb
-      #   DB_USERNAME: root
-      #   DB_PASSWORD: password
-      #   CACHE_DRIVER: memcached
-      #   QUEUE_DRIVER: sync
-      - image: postgres:latest
+      - image: circleci/9.6.9-alpine
         environment:
           - POSTGRES_DB: erp
           - POSTGRES_USER: docker_erp_user
@@ -23,28 +11,28 @@ jobs:
     working_directory: /var/www/html
     steps:
       - run:
-          name: Install System Packages
-          command: apt-get update && apt-get -y install git unzip zlib1g-dev postgresql-dev
+        name: Install System Packages
+        command: apt-get update && apt-get -y install git unzip zlib1g-dev
       - checkout
       - run:
-          name: Install PHP Extensions
-          command: docker-php-ext-install pdo pdo_pgsql zip
+        name: Install PHP Extensions
+        command: docker-php-ext-install pdo pdo_pgsql zip
       - run:
-          name: Install Composer
-          command: |
-            php -r "copy('https://getcomposer.org/installer', 'composer-setup.php');"
-            php -r "copy('https://composer.github.io/installer.sig', 'composer-setup.sig');"
-            php -r "if (hash_file('SHA384', 'composer-setup.php') === trim(file_get_contents('composer-setup.sig'))) { echo 'Installer verified'; } else { echo 'Installer corrupt'; unlink('composer-setup.php'); } echo PHP_EOL;"
-            php composer-setup.php
-            php -r "unlink('composer-setup.php');"
+        name: Install Composer
+        command: |
+          php -r "copy('https://getcomposer.org/installer', 'composer-setup.php');"
+          php -r "copy('https://composer.github.io/installer.sig', 'composer-setup.sig');"
+          php -r "if (hash_file('SHA384', 'composer-setup.php') === trim(file_get_contents('composer-setup.sig'))) { echo 'Installer verified'; } else { echo 'Installer corrupt'; unlink('composer-setup.php'); } echo PHP_EOL;"
+          php composer-setup.php
+          php -r "unlink('composer-setup.php');"
       - run:
-          name: Install Project Dependencies
-          command: php composer.phar install
+        name: Install Project Dependencies
+        command: php composer.phar install
       - run:
-          name: Initialize Database
-          command: |
-            php artisan migrate:refresh
-            php artisan db:seed
+        name: Initialize Database
+        command: |
+          php artisan migrate:refresh
+          php artisan db:seed
       - run:
-          name: Run Tests
-          command: vendor/bin/phpunit
+        name: Run Tests
+        command: vendor/bin/phpunit
