--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,10 +10,10 @@ jobs:
           - POSTGRES_USER: docker_erp_user
           - POSTGRES_PASSWORD: docker_erp_password
     steps:
-      - checkout
       - run:
           name: Install System Packages
           command: apt-get update && apt-get -y install git unzip zlib1g-dev
+      - checkout
       - run:
           name: Install PHP Extensions
           command: docker-php-ext-install pdo pdo_pgsql zip
@@ -39,6 +39,6 @@ jobs:
 
 workflows:
   version: 2
-  build_and_test:
+  workflow:
     jobs:
       - build
