--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,22 +1,22 @@
 version: 2
 jobs:
   build:
-    working_directory: /var/www/html
     docker:
-      - image: circleci/php:7.0-apache
-      - image: circleci/postgres:latest
+      - image: php:7.0-apache
+      - image: postgres:latest
         environment:
           - POSTGRES_DB: erp
           - POSTGRES_USER: docker_erp_user
           - POSTGRES_PASSWORD: docker_erp_password
+    working_directory: /var/www/html
     steps:
       - run:
           name: Install System Packages
-          command: apt-get update && apt-get -y install git unzip zlib1g-dev
+          command: apt-get update && apt-get install -y git unzip zlib1g-dev libpq-dev
       - checkout
       - run:
           name: Install PHP Extensions
-          command: docker-php-ext-install pdo pdo_pgsql zip
+          command: docker-php-ext-configure pgsql -with-pgsql=/usr/local/pgsql && docker-php-ext-install pdo pdo_pgsql zip
       - run:
           name: Install Composer
           command: |
@@ -36,7 +36,6 @@ jobs:
       - run:
           name: Run Tests
           command: vendor/bin/phpunit
-
 workflows:
   version: 2
   workflow:
