--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,7 +27,7 @@ jobs:
             php -r "unlink('composer-setup.php');"
       - run:
           name: Install Project Dependencies
-          command: php composer.phar install
+          command: php composer.phar install --ignore-platform-reqs ext-pcntl ext-posix
       - run:
           name: Initialize Database
           command: |
