--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,18 +18,18 @@ jobs:
       - run:
           name: Install PHP Extensions
           command: docker-php-ext-configure pgsql -with-pgsql=/usr/local/pgsql && docker-php-ext-install pdo pdo_pgsql zip
-      # - run:
-      #     name: Install Composer
-      #     command: |
-      #       php -r "copy('https://getcomposer.org/installer', 'composer-setup.php');"
-      #       php -r "copy('https://composer.github.io/installer.sig', 'composer-setup.sig');"
-      #       php -r "if (hash_file('SHA384', 'composer-setup.php') === trim(file_get_contents('composer-setup.sig'))) { echo 'Installer verified'; } else { echo 'Installer corrupt'; unlink('composer-setup.php'); } echo PHP_EOL;"
-      #       php composer-setup.php
-      #       php -r "unlink('composer-setup.php');"
-      # - run:
-      #     name: Install Project Dependencies
-      #     command: php composer.phar install --ignore-platform-reqs
-      # - run:
+      - run:
+          name: Install Composer
+          command: |
+            php -r "copy('https://getcomposer.org/installer', 'composer-setup.php');"
+            php -r "copy('https://composer.github.io/installer.sig', 'composer-setup.sig');"
+            php -r "if (hash_file('SHA384', 'composer-setup.php') === trim(file_get_contents('composer-setup.sig'))) { echo 'Installer verified'; } else { echo 'Installer corrupt'; unlink('composer-setup.php'); } echo PHP_EOL;"
+            php composer-setup.php
+            php -r "unlink('composer-setup.php');"
+      - run:
+          name: Install Project Dependencies
+          command: php composer.phar install #--ignore-platform-reqs
+      - run:
       #     name: Initialize Database
       #     command: |
       #       php artisan migrate:refresh
