--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,7 +24,7 @@ jobs:
             php -r "copy('https://getcomposer.org/installer', 'composer-setup.php');"
             php -r "copy('https://composer.github.io/installer.sig', 'composer-setup.sig');"
             php -r "if (hash_file('SHA384', 'composer-setup.php') === trim(file_get_contents('composer-setup.sig'))) { echo 'Installer verified'; } else { echo 'Installer corrupt'; unlink('composer-setup.php'); } echo PHP_EOL;"
-            php composer-setup.php --install-dir=bin --filename=composer
+            php composer-setup.php
             php bin/composer
             php -r "unlink('composer-setup.php');"
       - run:
