--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,11 +25,13 @@ jobs:
             php -r "copy('https://composer.github.io/installer.sig', 'composer-setup.sig');"
             php -r "if (hash_file('SHA384', 'composer-setup.php') === trim(file_get_contents('composer-setup.sig'))) { echo 'Installer verified'; } else { echo 'Installer corrupt'; unlink('composer-setup.php'); } echo PHP_EOL;"
             php composer-setup.php
-            # php /var/www/html/composer
             php -r "unlink('composer-setup.php');"
       - run:
           name: Install Project Dependencies
-          command: php composer.phar install #--ignore-platform-reqs
+          command: php composer.phar #install #--ignore-platform-reqs # php /var/www/html/composer
+      - run:
+          name: Verify Composer Installation
+          command: composer --version
       # - run:
       #     name: Initialize Database
       #     command: |
