--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,7 +34,7 @@ jobs:
           command: php composer.phar --version
       - run:
           name: Install packages via composer
-          command: php composer.phar update --dev
+          command: php composer.phar --prefer-dist --dev
       # - run:
       #     name: Initialize Database
       #     command: |
@@ -43,9 +43,9 @@ jobs:
       # - run:
       #     name: Run Docker
       #     command: docker-compose up -d
-      # - run:
-      #     name: Run Tests
-      #     command: php composer.phar vendor/bin/phpunit
+      - run:
+          name: Run Tests
+          command: vendor/bin/phpunit
 workflows:
   version: 2
   workflow:
