--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,9 +32,9 @@ jobs:
       - run:
           name: Verify Composer Installation
           command: php composer.phar --version
-      - run:
-          name: Install packages via composer
-          command: php composer.phar update --prefer-dist --dev
+      # - run:
+      #     name: Install packages via composer
+      #     command: php composer.phar update --prefer-dist
       - run:
           name: PHP files used in CLI mode
           command: php --ini
