--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,7 +48,7 @@ jobs:
       #     command: docker-compose up -d
       - run:
           name: Run Tests
-          command: vendor/bin/phpunit
+          command: bin/phpunit
 workflows:
   version: 2
   workflow:
