--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,23 +18,23 @@ jobs:
       - run:
           name: Install PHP Extensions
           command: docker-php-ext-configure pgsql -with-pgsql=/usr/local/pgsql && docker-php-ext-install pdo pdo_pgsql zip
+      # - run:
+      #     name: Install Composer
+      #     command: |
+      #       php -r "copy('https://getcomposer.org/installer', 'composer-setup.php');"
+      #       php -r "copy('https://composer.github.io/installer.sig', 'composer-setup.sig');"
+      #       php -r "if (hash_file('SHA384', 'composer-setup.php') === trim(file_get_contents('composer-setup.sig'))) { echo 'Installer verified'; } else { echo 'Installer corrupt'; unlink('composer-setup.php'); } echo PHP_EOL;"
+      #       php composer-setup.php
+      #       php -r "unlink('composer-setup.php');"
+      # - run:
+      #     name: Install Project Dependencies
+      #     command: php composer.phar
+       - run:
+         name: Setup Laravel testing environment variables for CircleCI test
+         command: cp .env.testing .env
       - run:
           name: Install Composer
-          command: |
-            php -r "copy('https://getcomposer.org/installer', 'composer-setup.php');"
-            php -r "copy('https://composer.github.io/installer.sig', 'composer-setup.sig');"
-            php -r "if (hash_file('SHA384', 'composer-setup.php') === trim(file_get_contents('composer-setup.sig'))) { echo 'Installer verified'; } else { echo 'Installer corrupt'; unlink('composer-setup.php'); } echo PHP_EOL;"
-            php composer-setup.php
-            php -r "unlink('composer-setup.php');"
-      - run:
-          name: Install Project Dependencies
-          command: php composer.phar
-      - run:
-          name: Verify Composer Installation
-          command: php composer.phar --version
-      # - run:
-      #     name: Install packages via composer
-      #     command: php composer.phar update --prefer-dist
+          command: composer self-update
       - run:
           name: PHP files used in CLI mode
           command: php --ini
@@ -46,9 +46,9 @@ jobs:
       # - run:
       #     name: Run Docker
       #     command: docker-compose up -d
-      - run:
-          name: Run Tests
-          command: bin/phpunit
+      # - run:
+      #     name: Run Tests
+      #     command: bin/phpunit
 workflows:
   version: 2
   workflow:
