--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,7 @@
 version: 2
 jobs:
   build:
+    working_directory: /var/www/html #application
     docker:
       - image: php:7.1.27-apache
       - image: postgres:latest
@@ -9,35 +10,31 @@ jobs:
           - POSTGRES_USER: docker_erp_user
           - POSTGRES_PASSWORD: docker_erp_password
     parallelism: 4
-    working_directory: /var/www/html #application
     steps:
+      - checkout
       - run:
           name: Install System Packages
           command: apt-get update && apt-get install -y git unzip zlib1g-dev libpq-dev
-      - checkout
       - run:
           name: Install PHP Extensions
           command: docker-php-ext-configure pgsql -with-pgsql=/usr/local/pgsql && docker-php-ext-install pdo pdo_pgsql zip
-      # - run:
-      #     name: Install Composer
-      #     command: |
-      #       php -r "copy('https://getcomposer.org/installer', 'composer-setup.php');"
-      #       php -r "copy('https://composer.github.io/installer.sig', 'composer-setup.sig');"
-      #       php -r "if (hash_file('SHA384', 'composer-setup.php') === trim(file_get_contents('composer-setup.sig'))) { echo 'Installer verified'; } else { echo 'Installer corrupt'; unlink('composer-setup.php'); } echo PHP_EOL;"
-      #       php composer-setup.php
-      #       php -r "unlink('composer-setup.php');"
+      - run:
+          name: Install Composer
+          command: |
+            php -r "copy('https://getcomposer.org/installer', 'composer-setup.php');"
+            php -r "copy('https://composer.github.io/installer.sig', 'composer-setup.sig');"
+            php -r "if (hash_file('SHA384', 'composer-setup.php') === trim(file_get_contents('composer-setup.sig'))) { echo 'Installer verified'; } else { echo 'Installer corrupt'; unlink('composer-setup.php'); } echo PHP_EOL;"
+            php composer-setup.php
+            php -r "unlink('composer-setup.php');"
       # - run:
       #     name: Install Project Dependencies
       #     command: php composer.phar
       - run:
           name: Setup Laravel testing environment variables for CircleCI test
           command: cp .env.testing .env
-      - run:
-          name: Install Composer
-          command: composer self-update
-      - run:
-          name: PHP files used in CLI mode
-          command: php --ini
+      # - run:
+      #     name: PHP files used in CLI mode
+      #     command: php --ini
       # - run:
       #     name: Initialize Database
       #     command: |
@@ -48,7 +45,7 @@ jobs:
       #     command: docker-compose up -d
       # - run:
       #     name: Run Tests
-      #     command: bin/phpunit
+      #     command: vendor/bin/phpunit
 workflows:
   version: 2
   workflow:
