--- a/.env.testing
+++ b/.env.testing
@@ -10,7 +10,7 @@ DB_CONNECTION=system
 DB_HOST=db
 DB_PORT=5432
 DB_USERNAME=docker_erp_user
-DB_DATABASE=erp
+DB_DATABASE=erp_testing
 DB_PASSWORD=docker_erp_password
 
 MAIL_DRIVER=smtp
