--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,9 +35,10 @@ jobs:
       # - run:
       #     name: PHP files used in CLI mode
       #     command: php --ini
+      - run: composer install --optimize-autoloader --no-dev
       - run:
           name: Migrate Laravel Database
-          command: php composer.phar artisan migrate:fresh --seed --env=testing
+          command: sudo php artisan migrate:fresh --seed --env=testing
       # - run:
       #     name: Run Docker
       #     command: docker-compose up -d
