--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,7 +35,7 @@ jobs:
       # - run:
       #     name: PHP files used in CLI mode
       #     command: php --ini
-      - run: composer install --optimize-autoloader --no-dev
+      - run: php composer.phar install --optimize-autoloader --no-dev
       - run:
           name: Migrate Laravel Database
           command: sudo php artisan migrate:fresh --seed --env=testing
@@ -44,7 +44,7 @@ jobs:
       #     command: docker-compose up -d
       # - run:
       #     name: Run Tests
-      #     command: vendor/bin/phpunit
+      #     command: ./vendor/bin/phpunit
 workflows:
   version: 2
   workflow:
