--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,7 +35,7 @@ jobs:
       # - run:
       #     name: PHP files used in CLI mode
       #     command: php --ini
-      - run: php composer.phar install --optimize-autoloader --no-dev
+      - run: php composer.phar update --optimize-autoloader --no-dev
       - run:
           name: Migrate Laravel Database
           command: sudo php artisan migrate:fresh --seed --env=testing
