--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,11 +30,11 @@ jobs:
           name: Setup Laravel testing environment variables for CircleCI test
           command: cp .env.testing .env
       - run:
-          name: Install Project Dependencies
+          name: Install Lumen #Project Dependencies
           command: php composer.phar global require "laravel/lumen-installer"
       - run:
-          name: PHP files used in CLI mode
-          command: php lumen list #--ini
+          name: PHP list lumen commands
+          command: php /var/www/html/lumen list
       - run:
           name: Migrate Laravel Database
           command: php artisan migrate:fresh --seed --env=testing
