--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,10 +34,10 @@ jobs:
           command: php composer.phar global require "laravel/lumen-installer"
       - run:
           name: PHP list lumen commands
-          command: php /var/www/html/lumen list
+          command: php /Users/andelatsm/.composer/vendor/bin/lumen list
       - run:
           name: Migrate Laravel Database
-          command: php artisan migrate:fresh --seed --env=testing
+          command: php /var/www/html/artisan migrate:fresh --seed --env=testing
       # - run:
       #     name: Run Docker
       #     command: docker-compose up -d
