--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,15 +29,18 @@ jobs:
       - run:
           name: Setup Laravel testing environment variables for CircleCI test
           command: cp .env.testing .env
-      - run:
-          name: Install Lumen #Project Dependencies
-          command: php composer.phar global require "laravel/lumen-installer"
+      # - run:
+      #     name: Install Lumen
+      #     command: php composer.phar global require "laravel/lumen-installer"
       - run:
           name: PHP list lumen commands
           command: php /root/.composer/vendor/bin/lumen list
-      - run:
-          name: Migrate Laravel Database
-          command: php /var/www/html/artisan migrate:fresh --seed --env=testing
+      - run
+          name: Execute the artisan command
+          command: php /root/.composer/vendor/bin/artisan
+      # - run:
+      #     name: Migrate Laravel Database
+      #     command: php /var/www/html/artisan migrate:fresh --seed --env=testing
       # - run:
       #     name: Run Docker
       #     command: docker-compose up -d
