--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,7 +35,7 @@ jobs:
       - run:
           name: PHP list lumen commands
           command: php /root/.composer/vendor/bin/lumen list
-      - run
+      - run:
           name: Execute the artisan command
           command: php /root/.composer/vendor/bin/artisan
       # - run:
