--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,7 +37,7 @@ jobs:
           command: php /root/.composer/vendor/bin/lumen list
       - run:
           name: Execute the artisan command
-          command: php /root/.composer/vendor/bin/artisan
+          command: php /var/www/html/artisan
       # - run:
       #     name: Migrate Laravel Database
       #     command: php /var/www/html/artisan migrate:fresh --seed --env=testing
