--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,7 +36,7 @@ jobs:
           command: php composer.phar global require "laravel/lumen-installer"
       - run:
           name: PHP list lumen commands
-          command: php /root/.composer/vendor/bin/lumen list
+          command: ls #php /root/.composer/vendor/bin/lumen list
       - run:
           name: Execute the artisan command
           command: php /root/.composer/vendor/bin/artisan
