--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,7 +39,7 @@ jobs:
           command: chmod +x artisan && ls && pwd #php /root/.composer/vendor/bin/lumen list
       - run:
           name: Execute the artisan command
-          command: /var/www/html/artisan
+          command: php artisan
       # - run:
       #     name: Migrate Laravel Database
       #     command: php /var/www/html/artisan migrate:fresh --seed --env=testing
