--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,7 +39,7 @@ jobs:
           command: chmod +x artisan && ls && pwd #php /root/.composer/vendor/bin/lumen list
       - run:
           name: Fire up Docker
-          command: docker-compose up -d
+          command: /var/www/html/docker-compose up -d
       # - run:
       #     name: Execute the artisan command
       #     command: php artisan key:generate
