--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,18 +31,20 @@ jobs:
       # - run:
       #     name: Setup Laravel testing environment variables for CircleCI test
       #     command: cp .env.testing .env
+      # - run:
+      #     name: Display PHP information and Install project dependencies
+      #     command: |
+      #       php -v
+      #       php composer.phar --version
+      #       php composer.phar install
       - run:
-          name: Display PHP information and Install project dependencies
+          name: Install project dependencies
           command: |
-            php -v
-            php composer.phar --version
-            php composer.phar install
-      - run:
-          name: Install Lumen
-          command: php composer.phar global require "laravel/lumen-installer"
-      - run:
-          name: Make Artisan executable
-          command: chmod +x artisan && ls && pwd #php /root/.composer/vendor/bin/lumen list
+            php composer.phar global require "laravel/lumen-installer"
+            php composer.phar require --dev phpunit/php-invoker
+      # - run:
+      #     name: Make Artisan executable
+      #     command: chmod +x artisan && ls && pwd #php /root/.composer/vendor/bin/lumen list
       - run:
           name: Execute the artisan command
           command: php artisan list
