--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,10 +41,10 @@ jobs:
           name: Install project dependencies
           command: |
             php composer.phar global require "laravel/lumen-installer"
-            php composer.phar require --dev phpunit/php-invoker
-      # - run:
-      #     name: Make Artisan executable
-      #     command: chmod +x artisan && ls && pwd #php /root/.composer/vendor/bin/lumen list
+            php composer.phar require --dev phpunit/php-invoker --ignore-platform-reqs
+      - run:
+          name: Make Artisan executable
+          command: chmod +x artisan && ls && pwd #php /root/.composer/vendor/bin/lumen list
       - run:
           name: Execute the artisan command
           command: php artisan list
