--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,18 +33,13 @@ jobs:
       #     command: cp .env.testing .env
       - run:
           name: Install project dependencies
-          command: |
-            php composer.phar global require "laravel/lumen-installer"
-            php composer.phar require --dev phpunit/php-invoker
-      - run:
-          name: Make Artisan executable
-          command: chmod +x artisan && ls && pwd #php /root/.composer/vendor/bin/lumen list
-      - run:
-          name: Execute the artisan command
-          command: php artisan migrate:fresh --seed --env=testing
+          command: php composer.phar install
+      # - run:
+      #     name: Make Artisan executable
+      #     command: chmod +x artisan && ls && pwd
       # - run:
       #     name: Migrate Laravel Database
-      #     command: php /var/www/html/artisan migrate:fresh --seed --env=testing
+      #     command: php artisan migrate:fresh --seed --env=testing
       # - run:
       #     name: Run Docker
       #     command: docker-compose up -d
