--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "vlucas/phpdotenv": "^3.3"
     },
     "require-dev": {
+        "heroku/heroku-buildpack-php": "dev-master",
         "appzcoder/lumen-routes-list": "^1.0",
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
