--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -6,7 +6,7 @@ http {
 
         client_max_body_size 108M;
 
-        access_log /var/log/nginx/access.log;
+        access_log /logs/access.log;
 
         root /application/public;
         index index.php;
