--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -1,4 +1,4 @@
-http {
+# http {
     server {
         listen 80;
 
@@ -6,9 +6,9 @@ http {
 
         client_max_body_size 108M;
 
-        access_log /var/log/nginx/access.log  main;
+        access_log /var/log/nginx/access.log;
 
-        root /application/public;
+        root /public;
         index index.php;
 
         if (!-e $request_filename) {
@@ -26,4 +26,4 @@ http {
         }
 
     }
-}
+# }
