--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -8,7 +8,7 @@
 
         access_log /var/log/nginx/access.log;
 
-        root /public;
+        root /application/public;
         index index.php;
 
         if (!-e $request_filename) {
@@ -16,7 +16,7 @@
         }
 
         location ~ \.php$ {
-            fastcgi_pass localhost:9000;
+            fastcgi_pass app:9000;
             fastcgi_index index.php;
             fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
             fastcgi_param PHP_VALUE "error_log=/var/log/nginx/application_php_errors.log";
