--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,24 +7,24 @@ services:
       - db
     container_name: app
     restart: unless-stopped
-    # working_dir: /application
+    working_dir: /application
     volumes:
-      # - .:/application
+      - .:/application
       - ./phpdocker/php-fpm/php-ini-overrides.ini:/etc/php/7.1/fpm/conf.d/99-overrides.ini
     networks:
       - app-network
 
   #Nginx Service
   webserver:
-    image: nginx:alpine
+    image: nginx:latest
     depends_on:
       - app
     container_name: webserver
     restart: unless-stopped
     tty: true
-    # working_dir: /application
+    working_dir: /application
     volumes:
-      # - .:/application
+      - .:/application
       - ./docker/nginx/nginx.conf:/etc/nginx/conf.d/default.conf
     ports:
       - "80:80"
