--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
 
   #Nginx Service
   webserver:
-    image: nginx:latest
+    image: nginx:1.16.0
     depends_on:
       - app
     container_name: webserver
