--- a/composer.json
+++ b/composer.json
@@ -51,6 +51,6 @@
             "ext-posix": "7.2"
         }
     },
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "prefer-stable": true
 }
