--- a/heroku.yml
+++ b/heroku.yml
@@ -1,9 +1,8 @@
-# build:
-#   docker:
-#     db: docker/postgres/Dockerfile
-# release:
-#   image: db
-
+build:
+  docker:
+    db: docker/postgres/Dockerfile
+release:
+  image: db
 # #   heroku container:release erp_db
 # # heroku container:release erp_app
 # # heroku container:release webserver
