--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -1,11 +1,32 @@
+# upstream backend {
+#     server 127.0.0.1:8000;
+# }
+
+# server {
+#     server_name saas-erp.dev www.saas-erp.dev *.saas-erp.dev saas-erp.local www.saas-erp.local *.saas-erp.local;
+#     rewrite ^(.*) https://saas-erp.dev$1 permanent;
+# }
+
+# server {
+#     listen               443 ssl;
+#     ssl_certificate      /etc/nginx/localhost.pem;
+#     ssl_certificate_key  /etc/nginx/localhost.key;
+#     ssl_ciphers          HIGH:!aNULL:!MD5;
+#     server_name saas-erp.dev www.saas-erp.dev *.saas-erp.dev saas-erp.local www.saas-erp.local *.saas-erp.local;
+#     location / {
+#         proxy_pass  http://backend;
+#     }
+# }
+
 server {
     listen 80;
 
-    server_name localhost;
+    server_name saas-erp.dev www.saas-erp.dev *.saas-erp.dev saas-erp.local www.saas-erp.local *.saas-erp.local;
 
     client_max_body_size 108M;
 
-    access_log /var/log/nginx/access.log;
+    access_log /var/log/nginx/$host-access.log;
+    error_log  /var/log/nginx/$host-error.log;
 
     root /application/public;
     index index.php;
@@ -23,5 +44,5 @@ server {
         fastcgi_buffer_size 32k;
         include fastcgi_params;
     }
-
 }
+
