--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
 
   #Nginx Service
   webserver:
-    image: nginx:1.16.0
+    image: nginx:alpine
     depends_on:
       - app
     container_name: webserver
@@ -26,6 +26,8 @@ services:
     volumes:
       - .:/application
       - ./docker/nginx/nginx.conf:/etc/nginx/conf.d/default.conf
+      - ./docker/certbot/etc:/etc/letsencrypt
+      - ./docker/certbot/var:/var/lib/letsencrypt
     ports:
       - "80:80"
       - "443:443"
@@ -48,6 +50,21 @@ services:
     networks:
       - app-network
 
+  # #CertBot
+  certbot:
+    image: certbot/certbot
+    container_name: certbot
+    working_dir: /application
+    volumes:
+      - .:/application
+      - ./docker/certbot/etc:/etc/letsencrypt
+      - ./docker/certbot/var:/var/lib/letsencrypt
+    depends_on:
+      - webserver
+    command: certonly --webroot --webroot-path=/application/public --email adegbenga.adeye@outlook.com --agree-tos --no-eff-email --staging -d saas-erp.dev -d www.saas-erp.dev
+    networks:
+      - app-network
+
 #Docker Networks
 networks:
   app-network:
@@ -55,5 +72,7 @@ networks:
 
 #Volumes
 volumes:
+  certbot-etc:
+  certbot-var:
   my_dbdata:
     driver: local
