--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -1,27 +1,43 @@
-# upstream backend {
-#     server 127.0.0.1:8000;
-# }
-
-# server {
-#     server_name saas-erp.dev www.saas-erp.dev *.saas-erp.dev saas-erp.local www.saas-erp.local *.saas-erp.local;
-#     rewrite ^(.*) https://saas-erp.dev$1 permanent;
-# }
-
-# server {
-#     listen               443 ssl;
-#     ssl_certificate      /etc/nginx/localhost.pem;
-#     ssl_certificate_key  /etc/nginx/localhost.key;
-#     ssl_ciphers          HIGH:!aNULL:!MD5;
-#     server_name saas-erp.dev www.saas-erp.dev *.saas-erp.dev saas-erp.local www.saas-erp.local *.saas-erp.local;
-#     location / {
-#         proxy_pass  http://backend;
-#     }
-# }
-
 server {
-    listen 80;
 
-    server_name saas-erp.dev www.saas-erp.dev *.saas-erp.dev saas-erp.local www.saas-erp.local *.saas-erp.local;
+    listen 80 default_server;
+
+    server_name _;
+
+    return 301 https://$host$request_uri;
+
+    # listen 80;
+
+    # server_name saas-erp.dev saas-erp.local localhost;
+
+    # client_max_body_size 108M;
+
+    # access_log /var/log/nginx/$host-access.log;
+    # error_log  /var/log/nginx/$host-error.log;
+
+    # root /application/public;
+    # index index.php;
+
+    # if (!-e $request_filename) {
+    #     rewrite ^.*$ /index.php last;
+    # }
+
+    # location ~ \.php$ {
+    #     fastcgi_pass app:9000;
+    #     fastcgi_index index.php;
+    #     fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+    #     fastcgi_param PHP_VALUE "error_log=/var/log/nginx/application_php_errors.log";
+    #     fastcgi_buffers 16 16k;
+    #     fastcgi_buffer_size 32k;
+    #     include fastcgi_params;
+    # }
+}
+
+# HTTPS server
+server {
+    listen       443 ssl;
+
+    server_name saas-erp.dev saas-erp.local localhost;
 
     client_max_body_size 108M;
 
@@ -30,6 +46,15 @@ server {
 
     root /application/public;
     index index.php;
+
+    ssl_certificate     /etc/nginx/example.com+5.pem;
+    ssl_certificate_key  /etc/nginx/example.com+5-key.pem;
+
+    ssl_session_cache    shared:SSL:1m;
+    ssl_session_timeout  5m;
+
+    ssl_ciphers  HIGH:!aNULL:!MD5;
+    ssl_prefer_server_ciphers  on;
 
     if (!-e $request_filename) {
         rewrite ^.*$ /index.php last;
@@ -45,4 +70,3 @@ server {
         include fastcgi_params;
     }
 }
-
