--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,27 +7,26 @@ services:
       - db
     container_name: app
     restart: unless-stopped
-    working_dir: /application
     volumes:
       - .:/application
-      - ./phpdocker/php-fpm/php-ini-overrides.ini:/etc/php/7.1/fpm/conf.d/99-overrides.ini
+      - ./phpdocker/php-fpm/php-ini-overrides.ini:/etc/php/7.2/fpm/conf.d/99-overrides.ini
     networks:
       - app-network
 
   #Nginx Service
   webserver:
     image: nginx:alpine
+    container_name: webserver
     depends_on:
       - app
-    container_name: webserver
     restart: unless-stopped
     tty: true
-    working_dir: /application
+    # command: mkdir certs
     volumes:
       - .:/application
+      - ./docker/nginx/example.com+5.pem:/etc/nginx/example.com+5.pem
+      - ./docker/nginx/example.com+5-key.pem:/etc/nginx/example.com+5-key.pem
       - ./docker/nginx/nginx.conf:/etc/nginx/conf.d/default.conf
-      # - ./docker/certbot/etc:/etc/letsencrypt
-      # - ./docker/certbot/var:/var/lib/letsencrypt
     ports:
       - "80:80"
       - "443:443"
@@ -50,21 +49,6 @@ services:
     networks:
       - app-network
 
-  # #CertBot
-  # certbot:
-  #   image: certbot/certbot
-  #   container_name: certbot
-  #   working_dir: /application
-  #   volumes:
-  #     - .:/application
-  #     - ./docker/certbot/etc:/etc/letsencrypt
-  #     - ./docker/certbot/var:/var/lib/letsencrypt
-  #   depends_on:
-  #     - webserver
-  #   command: certonly --webroot --webroot-path=/application/public --email adegbenga.adeye@outlook.com --agree-tos --no-eff-email --staging -d saas-erp.dev -d www.saas-erp.dev
-  #   networks:
-  #     - app-network
-
 #Docker Networks
 networks:
   app-network:
@@ -72,7 +56,5 @@ networks:
 
 #Volumes
 volumes:
-  certbot-etc:
-  certbot-var:
   my_dbdata:
     driver: local
