--- a/composer.json
+++ b/composer.json
@@ -14,11 +14,11 @@
         "vlucas/phpdotenv": "^3.3"
     },
     "require-dev": {
-        "appzcoder/lumen-routes-list": "^1.0",
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
         "phpunit/php-invoker": "^2.0",
-        "phpunit/phpunit": "^7.0"
+        "phpunit/phpunit": "^7.0",
+        "appzcoder/lumen-routes-list": "^1.0"
     },
     "autoload": {
         "classmap": [
@@ -37,6 +37,19 @@
     "scripts": {
         "post-root-package-install": [
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
+        ],
+        "post-create-project-cmd": [
+            "php artisan key:generate"
+        ],
+        "post-install-cmd": [
+            "composer dump-autoload",
+            "php artisan cache:clear"
+        ],
+        "pre-update-cmd": [
+            "php artisan clear-compiled"
+        ],
+        "post-update-cmd": [
+            "php artisan optimize"
         ]
     },
     "config": {
