--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,7 +36,7 @@ jobs:
           name: deploy to GCP
           command: |
             if ["$CIRCLE_BRANCH" == 'master' ]; then
-              ssh -i $SSH_PRIVATE_KEY $USER@$IPADDRESS 'git pull master && docker-compose down && docker-compose up'
+              ssh -i $SSH_PRIVATE_KEY $USER@$IPADDRESS 'git pull https://github.com/deye9/erp.git && sudo docker-compose down && sudo docker-compose up'
             fi
 
       # - run:
